[package]
name = "aap-protocol"
version = "0.1.0"
edition = "2021"
description = "Agent Accountability Protocol — Rust SDK"
license = "MIT"
repository = "https://github.com/ElmadaniS/aap-rust"
homepage = "https://aap-protocol.dev"
keywords = ["aap", "agent", "accountability", "protocol", "ai"]
categories = ["cryptography", "authentication", "network-programming"]
readme = "README.md"

[dependencies]
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
regex = "1.10"
hex = "0.4"
base64 = "0.22"

[dev-dependencies]
tempfile = "3.10"
